--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ script:
     - pip install .
     # Run tests and linters.
     - flake8 --show-source .
+    # stop the build if there are Python syntax errors or undefined names
+    - flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics
+    # exit-zero treats all errors as warnings.  The GitHub editor is 127 chars wide
+    - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - pylint tests
     - python -m unittest discover tests
     # Test the uninstallation of skt,
