Test coverall with travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,20 @@
 language: python
 python:
     - "2.7"
+env:
+    - TOX_ENV=py27
+
 install:
     # Install skt using pip to ensure dependencies are downloaded correctly.
     - pip install .
+    - pip install coveralls tox
 script:
     # Run tests and linters.
     - flake8 --show-source .
     - pylint tests
     - python -m unittest discover tests
+    - tox -e $TOX_ENV
     # Test the uninstallation of skt,
     - pip uninstall -y skt
+after_success:
+    - coveralls
